Add verifiable credential logic

--- a/config/idps/idp1.yml
+++ b/config/idps/idp1.yml
@@ -1,4 +1,5 @@
-broker: https://stub-oidc-broker-1.cloudapps.digital
+idp_name: another
+broker_domain: https://stub-oidc-broker-1.cloudapps.digital
 title: IDP 1
 authentication_title: IDP 1
 sign_in: Sign in to your existing IDP 1 account
