Add CSS styling for second IDP

--- a/config/idps/idp1.yml
+++ b/config/idps/idp1.yml
@@ -1,4 +1,4 @@
 idp_name: IDP-1
 title: IDP 1
 sign_in: Sign in to a Post Office ID
-consent: This data will only be used to prove your identity and to do checks against the criminal record database
+sign_up: Create new account?
